alambert    2005/11/05 06:46:13 UTC	(20051105-3473)
  Log:
  authcookie_destroy(): remember to node_free()

  Changes:	Modified:
  +1 -0		trunk/src/authcookie.c (File Modified) 


w00t        2005/11/05 06:40:44 UTC	(20051105-3471)
  Log:
  ms_ignore_ignore -> ms_ignore_clear to be in-line with the others. Minute change.

  Changes:	Modified:
  +3 -3		trunk/modules/memoserv/ignore.c (File Modified) 


w00t        2005/11/05 06:23:46 UTC	(20051105-3469)
  Log:
  Finally finished XOP rework (DEL still hadn't been fixed.)

  Changes:	Modified:
  +32 -112	trunk/modules/chanserv/xop.c (File Modified) 


nenolod     2005/11/05 05:45:31 UTC	(20051105-3467)
  Log:
  Formatting niceities.

  Changes:	Modified:
  +1 -0		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2005/11/05 05:43:49 UTC	(20051105-3465)
  Log:
  Perhaps this will make the service come back.

  Changes:	Modified:
  +36 -2	trunk/modules/chanserv/main.c (File Modified) 


nenolod     2005/11/05 04:59:56 UTC	(20051105-3463)
  Log:
  Warning fix.

  Changes:	Modified:
  +1 -1		trunk/src/module.c (File Modified) 


nenolod     2005/11/05 04:29:26 UTC	(20051105-3461)
  Log:
  Remove the 0.2 ROADMAP from our documentation bin.
  

  Changes:	Modified:
  +0 -37	trunk/doc/ROADMAP (File Deleted) 


pfish       2005/11/04 08:30:57 UTC	(20051104-3459)
  Log:
  UserServ: Use a help file in userserv/ instead of nickserv.
  

  Changes:	Modified:
  +10 -0	trunk/help/userserv/return (File Added) 
  +1 -1		trunk/modules/userserv/return.c (File Modified) 


pfish       2005/11/04 07:04:27 UTC	(20051104-3457)
  Log:
  UserServ: Update private:host:vhost metadata when a vhost is assigned/restored
  

  Changes:	Modified:
  +22 -0	trunk/modules/userserv/vhost.c (File Modified) 


alambert    2005/11/04 06:58:08 UTC	(20051104-3455)
  Log:
  XMLRPC: fix up some method arguments

  Changes:	Modified:
  +3 -3		trunk/contrib/xmlrpc_explorer.php (File Modified) 


pfish       2005/11/04 06:57:27 UTC	(20051104-3453)